# propertyApp

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: agreement.css  agreement.html  agreement_lobby.ts  docse.css  docse.html  main.ts  process.html  process.ts  publish.ts  setting.ts  settings.css  state.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agreement.rs  database.rs  lib.rs  llmEnhance.rs  main.rs  promt.md  telegram.rs  watermark.rs
